# Stratler

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
data/player_teams/: opponentTeam.txt  playerTeam.txt  playerTeamHealth.txt
engine/pokedex/: learnsets_database.h  move_database.h  pokemon_database.h
engine/pokemon/: pokemon.cpp  pokemon.h
engine/pokemon/move/: move.cpp  move.h
engine/pokemon/nature/: nature.cpp  nature.h
engine/pokemon/type/: type.cpp  type.h
engine/state/: state.cpp  state.h
include/imgui/: imgui.cpp  imgui.h
include/imgui/backends/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp
scripts/formatPokemonShowdownPokedex/: main.py  pokemon_database.h
scripts/parsePokemonLearnsetJSON/: main.py
scripts/parsePokemonLearnsetJSON/data/: gen6Learnset.json
scripts/parsePokemonMovesJSON/: main.py  move_database.h
scripts/parsePokemonWeaknesses/: main.py
tests/: CMakeLists.txt  typeTest.cpp
tests/data/: combinedWeaknesses.h
tests/pokemon/stats_calculation/: test_stat_calculation.cpp
tests/pokemon/stats_calculation/vectors/: pokemon_stats_vectors.h
util/table/: table.cpp  table.h
